--- a/package.json
+++ b/package.json
@@ -20,5 +20,6 @@
   "devDependencies": {
     "prop-types": "^15.6.0",
     "redux-devtools-extension": "^2.13.2"
-  }
+  },
+  "proxy": "http://localhost:8080"
 }
