npm link b2b-styles. fix small issues

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "redux-thunk": "^2.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "build-css": "node-sass-chokidar src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar src/ -o src/ --watch --recursive",
+    "serve": "react-scripts start",
+    "start": "npm-run-all -p watch-css serve",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
